# Auto-engineering

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  ae-plugin-acceptance-test.sh  hooks-cc.json  hooks-codex.json  install.sh  pyproject.toml  pyrightconfig.json  uninstall.sh
.ae-state/: init-manifest.json
.claude-plugin/: marketplace.json  plugin.json
.claude-plugin/commands/: audit.md  checkpoint.md  code-review.md  dev-loop.md  progress.md  project-agent.md  project-ci.md  project-tdd.md  project-worktree.md  status.md
.claude-plugin/hooks/: on-pr.sh  post-edit.sh  pre-tool.sh  session-start.sh  stop.sh
.claude/rules/: audit-role.md  design-document-inviolability.md  pytest-memory-management.md
.codex-plugin/: plugin.json
.github/workflows/: ci.yml  release.yml
.phase-execution/: state.json
.planning/: STATE.md
_proc-use/_bug-info/: atdo-13-11-coverage-shortfall.md
auto_engineering/: __init__.py  benchmark.py  cli.py  errors.py
auto_engineering/agents/: __init__.py  architect.py  authz.py  base.py  critic.py  developer.py  output_models.py  parser.py  prompts.py  schema.py
auto_engineering/checkpoint/: __init__.py  migrate.py
auto_engineering/cli/: __init__.py  agent.py  checkpoint.py  dev_loop.py  doctor.py  gate_check.py  helpers.py  prismscan.py  progress.py  status.py
auto_engineering/config/: __init__.py  environment.py  settings.py
auto_engineering/engine/: __init__.py  batch_state.py  checkpoint.py  design_doc.py  gap_analysis.py  graph.py  loop.py  messages.py  progress_tree.py  state.py  verification_layers.py
auto_engineering/gates/: __init__.py  _tools.py  audit.py  base.py  build.py  builtin.py  commit_msg_gate.py  contract.py  coverage.py  deep_audit.py  guardrail.py  lint.py  quality_gate.py  registry.py  safety.py  test.py  test_gate.py  type_check.py
auto_engineering/init/: answers.py  config.py  config_loader.py  detector.py  errors.py  hooks.py  prompts.py  renderer.py  scaffold.py  scaffold_phases.py  scaffold_render.py
auto_engineering/llm/: __init__.py  anthropic_provider.py
auto_engineering/loop/: __init__.py  action.schema.json  actions.py  audit_history.py  checkpoint.py  convergence.py  convergence_facade.py  debug_tracer.py  deep_audit.py  guardrail.py  guardrail_facade.py  init-manifest.schema.json  init_contract.py  orchestrator.py  plan.py  refine.py  round.py  semantic_evaluator.py  stage-result.schema.json  stage_router.py  standalone_driver.py  state.py  task_factory.py  threshold_learner.py  tick_orchestrator.py  types.py
auto_engineering/prismscan/: __init__.py  discover.py  extract.py  jsonl.py  jsonl_protocol.py  mod_b1.py  orchestrator.py  schemas.py
auto_engineering/prompts/: __init__.py  registry.py
auto_engineering/providers/: __init__.py  base.py  factory.py  openai_provider.py
auto_engineering/runtime/: __init__.py  cancellation.py  context.py  mock.py  runtime.py  task.py
auto_engineering/tools/: __init__.py  base.py  bash_tools.py  file_tools.py  git_tools.py  hello_world.py  pr_backend.py  registry.py  run_tests_tool.py  test_tools.py
auto_engineering/utils/: __init__.py  git.py  llm_credentials.py  plugin_mode.py
commands/: audit.md  checkpoint.md  code-review.md  dev-loop.md  project-agent.md  project-ci.md  project-tdd.md  project-worktree.md  status.md
design/: BEACON.md  DESIGN-REFINEMENT-PLAN.md  IMPLEMENTATION-TRACKER.md  INDEX.md  INIT-LOOP-CONTRACT.md  checkpoint-contract-fix-PLAN.md  init-TODO.md  phase3-t9-wiring-PLAN.md  remaining-execution-PLAN.md  v1.0-DESIGN.md  v1.0-Design-Init.md  v1.0-Design-Shared.md  v1.0-INIT-PLAN.md  v1.0-INIT.md  v1.0-LOOP.md.bak.20260624-001459  v1.0-SHARED.md  v1.1-AUDIT-REPORT.md  v1.1-DEVELOPMENT-PLANS.md  v1.1-PLAN-D1-runtime-guardrail.json  v1.1-TODO-LIST.md  v1.1-UNIFIED-DEV-PLAN.md  v2.0-LOOP-ANALYSIS.md  v2.3-Plan-Dev.md.orig.2026-06-26T05-48-06-558Z.md  v5.0-Design-Loop.md  v5.5-IMPLEMENTATION-PLAN.md  v5.6-Design-Loop.md  v7.0-Plan-DualDriver.md
design/decisions/: 9-round-audit-plan-2026-07-08.md  audit-deferred-2026-07-07.md
design/discussion/: v5.1-code-review-integration-gap.md  v5.1-code-review-pr-design.md  v5.1-remaining-P0-design.md  v5.6-layered-verification-design.md  v5.6-progress-tree-design.md  v7.0-driver-fidelity-comparison.md  v7.0-dual-driver-architecture.md
design/his_bak/: 2026-06-30-pre-round16-audit.md  README.md  dev-loop-TODO.md  v1.0-Design-Loop.md  v1.1-Audit-Report-20260625.md  v1.1-Audit-Report.md  v1.1-DEV-PLAN.md  v1.1-LOOP-ROADMAP.md  v1.1-PLAN-A-bugfixes.json  v1.1-PLAN-B-config-cli.json  v1.1-PLAN-C-templates-borrowing.json  v1.1-PLAN-D2-agent-tools.json  v1.1-PLAN-D3-cli-observability.json  v1.1-Plan-Dev.md  v2.0-Design-Loop.md  v5.0-Design-Loop.md-20260630-pre-plugin-revision.md
design/reference/: data-pipeline-spec.md  (+1 more)
docs/: EARS-v5.0.md  PLUGIN-USAGE.md  USER_GUIDE.md  api-reference.md  e2e-real-run.md  entry-points.md  production-deployment.md  troubleshooting.md
hooks/: on-pr.sh  pre-tool.sh  session-start.sh  stop.sh
scripts/: atdo_smoke.py  sync_prompts.py
src/: index.html
tests/: _smoke_phase_d.py  _smoke_phase_d_v23.py  conftest.py  test_action_result_contract.py  test_actions.py  test_agent_merge_p1a.py  test_agents_3.py  test_agents_base_llm.py  test_agents_schema.py  test_answers.py  test_anthropic_provider.py  test_audit_history.py  test_authz.py  test_base.py  test_base_agent.py  test_base_agent_llm_errors.py  test_batch_state.py  test_builtin.py  test_cancellation.py  test_checkpoint.py  test_checkpoint_cli.py  test_checkpoint_envelope.py  test_checkpoint_internals.py  test_checkpoint_migrate.py  test_checkpoint_migration.py  test_checkpoint_store.py  test_cli.py  test_cli_agent.py  test_cli_checkpoint_extended.py  test_cli_dev_loop_extended.py  test_cli_dev_loop_tick.py  test_cli_gate_check.py  test_cli_helpers_extended.py  test_cli_integration.py  test_cli_progress.py  test_cli_runtime.py  test_cli_standalone.py  test_cli_status.py  test_cli_status_extended.py  test_cli_token_tracker.py  (+97 more)
voice-clone/: index.html  package.json
(+89 files in other folders)
