[project]
name = "auto-engineering"
version = "5.0.0"
description = "Auto-Engineering v5.0 — 团队级 Loop 工程 + 多 Agent 协作 + Plugin mode 零配置 + Self-Refine"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "钱敏健" },
]
keywords = ["agent", "loop", "scaffolding", "claude-api", "ai-engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "anthropic>=0.39",
    "click>=8.1",
    "jsonschema>=4.26.0",
    "markdown-it-py>=3.0",
    "packaging>=24",
    "pydantic>=2.9",
    "pyyaml>=6.0",
    # 2026-07-04 清理 (v5.0 深度审计 P1-T-01): Init 工程拆分独立后,
    # binaryornot / jinja2 / pathspec 不再使用 (BEACON 决策 30).
    # 2026-07-09 (v5.6 T4): markdown-it-py 用于 DesignDoc.parse() 层次识别 (B10.4a).
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-timeout>=2.4",
    "pytest-asyncio>=1.4",
    "ruff>=0.8",
    "mypy>=1.18",
    "pre-commit>=4",
]

[project.scripts]
ae = "auto_engineering.cli:main"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]
# RUF001/002/003: 全角字符(中文 docstring 常用「」「（）」，不属于 ambiguous)
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
# 测试约定豁免 (与生产不同): S101 assert 是测试主体; RUF012 mock/stub 类的
# 可变类属性是有意的 fixture 状态; SIM117 多个 patch 上下文的嵌套 with 更易读;
# B017 "失败即抛" 测试有意断言宽泛 Exception.
"tests/*.py" = ["S101", "RUF012", "SIM117", "B017"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--timeout=60", "-p no:cacheprovider"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.4.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.18",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
exclude = ["tests/", "build/", "dist/"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.uv]
package = true
